--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "commitizen": "^4.3.0",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
