--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "commitizen": "^4.3.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
