--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.14",
+    "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.14",
     "commitizen": "^4.3.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.0"
+    "react-hook-form": "^7.47.0",
+    "styled-components": "^6.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
