--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "simplebar-react": "^3.2.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
