--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.14",
+    "@types/uuid": "^9.0.6",
     "commitizen": "^4.3.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "simplebar-react": "^3.2.4",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
